--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,7 @@
       <header>
         <h1>AI vs Original Image Detector</h1>
         <p>Upload an image to get a heuristic assessment. This is not 100% accurate.</p>
+        <div id="apiStatus" class="api-status"><span class="dot dot--warn"></span> Checking backend…</div>
       </header>
 
       <section class="upload">
